--- a/contactus.html
+++ b/contactus.html
@@ -32,7 +32,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/index.html">Ristorante Con Fusion</a>
+                <a class="navbar-brand" href="index.html">Ristorante Con Fusion</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -40,7 +40,7 @@
                     <li><a href="aboutus.html">
                         <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About</a></li>
                     <li class="dropdown">
-                        <a href="contactus.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> 
+                        <a href="contactus.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> 
                          Menu <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="contactus.html#">Appetizers</a></li>
@@ -53,7 +53,7 @@
                             <li><a href="contactus.html#">Weekend Brunch</a></li>
                         </ul>
                     </li>
-                    <li class="active"><a href="contactus.html#">Contact</a></li>
+                    <li class="active"><a href="contactus.html#"><i class="fa fa-envelope-o"></i> Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -109,7 +109,11 @@
                 <h5>Map of our Location</h5>
             </div>
             <div class="col-xs-12 col-sm-11 col-sm-offset-1">
-                Button group goes here
+                <div class="btn-group" role="group" aria-label="...">
+                    <a type="button" class="btn btn-primary" href="tel:+85212345678"><i class="fa fa-phone"></i> Call</a>
+                    <a type="button" class="btn btn-info" href=""><i class="fa fa-skype"></i> Skype</a>
+                    <a type="button" class="btn btn-success" href="mailto:confusion@food.net"><i class="fa fa-envelope-o"></i> Email</a>          
+                </div>
             </div>
         </div>
 
@@ -118,7 +122,62 @@
               <h3>Send us your Feedback</h3> 
            </div>
             <div class="col-xs-12 col-sm-9">
-                Form goes here
+                <form class="form-horizontal" role="form">
+                    <div class="form-group">
+                        <label for="firstname" class="col-sm-2 control-label">First Name</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="firstname" name="firstname" placeholder="Enter First Name">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="lastname" class="col-sm-2 control-label">Last Name</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Enter Last Name">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="areacode" class="col-sm-2 control-label">Contact Tel.</label>
+                        <div class="col-sm-3">
+                            <div class="input-group">
+                            <div class="input-group-addon">(</div>
+                            <input type="tel" class="form-control" id="areacode" name="areacode" placeholder="Area code">
+                            <div class="input-group-addon">)</div>
+                            </div>
+                        </div>
+                        <div class="col-sm-7">
+                            <input type="tel" class="form-control" id="phonenumber" name="phonenumber" placeholder="Tel. Number">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="email" class="col-sm-2 control-label">Email</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="email" name="email" placeholder="Enter Your Email">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="checkbox col-sm-5 col-sm-offset-2">
+                            <label class="checkbox-inline">
+                                <input type="checkbox" name="approve" value="">
+                                <strong>May we contact you?</strong>
+                            </label>
+                        </div>
+                        <div class="col-sm-3 col-sm-offset-1">
+                            <select class="form-control">
+                                <option>Tel.</option>
+                                <option>Email</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="feedback" class="col-sm-2 control-label">Your Feedback</label>
+                        <div class="col-sm-10">
+                            <textarea  class="form-control" id="feedback" name="feedack" rows="12"></textarea>
+                        </div>
+                    </div>
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <button type="submit" class="btn btn-primary">Send Feedback</button>
+                    </div>
+                </form>
             </div>
              <div class="col-xs-12 col-sm-3">
                 <p style="padding:20px;"></p>
